proj1/tests/error/if_scope.py
if True:
    a = 10
print a
